--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
 	</head>
 <body>
 	<div id="wrapper">
-		<h1>Hack Spots</h1>
+		<h1>NYC Area Food Co-ops and Buying Clubs</h1>
 		<div>
 			<ul class="nav">
-				<li><strong>The collected favorites of those who hack</strong></li>
+				<li><strong>Collectively managed NYC Area listings</strong></li>
 				<li><a href="#info">INFO</a> -</li>
-				<li><a href="http://jlord.github.com/sheetsee.js" target="_blank">POWERED BY SHEETSEE.JS</a> -</li>
-				<li><a href="http://www.github.com/jlord/hack-spots" target="_blank">GITHUB</a> -</li>
-				<li><a href="http://www.twitter.com/jllord" target="_blank">@JLLORD</a></li>
+				<!-- @todo <li><a href="xxx" target="_blank">xxx</a> -</li>
+				<li><a href="xxx" target="_blank">xxx</a> -</li>
+				<li><a href="xxx" target="_blank">xxx</a></li> -->
 			</ul>
 		</div>
 		<div class="container">
@@ -46,16 +46,16 @@
 		<div id="info" class="container">
 			<h3>Contribute!</h3>
 			<div id="theNumberofSpots"></div>
-			<p>This website is hooked up to <a
-	 	href="https://docs.google.com/spreadsheet/ccc?key=0AhgGaMaJTafcdHAtUGNpSGRrT2Y4eHhZOTd4S2lKRnc#gid=0" target="_blank">this Google Spreadsheet</a>, which I've shared, so click and add your favorite hack spots to the bottom of the list! For the map you'll need to <strong>get the lat and long</strong> of the spot, you can get that <a href="http://www.latlong.net/" target="_blank">here</a>. The locating of these places is helpful, so please try to fill out all the columns.</p> 
+			<p>The information in this list is automagically pulled from <a
+	 	href="https://docs.google.com/spreadsheet/ccc?key=0AhgGaMaJTafcdHAtUGNpSGRrT2Y4eHhZOTd4S2lKRnc#gid=0" target="_blank">this Google Spreadsheet</a>, which I've shared, so feel free to add/update the spreadsheet where appropriate. For the map you'll need to <strong>get the lat and long</strong> of the spot, you can get that <a href="http://www.latlong.net/" target="_blank">here</a>. The main list will probably/eventually only display neighborhood, so don't worry if you can't supply latitude/longitude information..</p> 
 
 			<h3>Info</h3>
-			<p>When I'm visiting a new city I'd like to know which coffee shops have the best vibes, great coffee and are good for hunkering down and having a good hack. Yelp will tell you where the Starbucks is and Foursquare will tell you where your friend's have <em>been</em> - but did they like it and was it a grab in go place or a hack place? Plus, what about the people I don't follow on Foursquare or who can't check-in when in other countries?</p>
+			<p>This is (hopefully) a thorough but tidy and up-to-date listing of food co-ops and buying clubs in the NYC area, built and managed by those selfsame co-ops. If you're specifically interested in CSAs (Community Supported Agriculture), check out the <a href="http://www.justfood.org/csaloc">Just Food CSA locator.</a></p>
 
-			<p>Besides being a list I've wanted to have, it's a fantastic (or I think so) way of using <a href="http://jlord.github.io/sheetsee.js" target="_blank">sheetsee.js</a>, which is a little JavaScript library I've been working on. Sheetsee.js helps you hook a Google Spreadsheet (awesome for data and collaboration!) to a website to make data more visual (maps, tables, charts).</p>
+			<p>I think that a search for NYC coops should very quickly lead someone to a resource managed by the co-op community. You might simply be interested in finding a place to buy stuff for your stomach, but you might also care to know a bit more about the evolving landscape of NYC food systems.</p> 
 
 			<h3>Fork-n-Go</h3>
-			<p>This is a work-in-progress example of a fork-n-go project - which means, there is just a <a href="https://github.com/jlord/hack-spots" target="_blank">gh-pages branch in GitHub</a> for this project so when you fork it, you've got a live and hosted website instantly. BAM! Just copy the spreadsheet headers and create your own spreadsheet, swap out the spreadsheet key in index.html and commit those changes. BAM! You've got a live and hosted site with a spreadsheet you control. More on the <a href="http://www.github.com/jlord/hack-spots" target="_blank">readme</a>.</p>
+			<p>This site exists as it is because of several open-source projects, most notably <a href="http://jlord.github.io/sheetsee.js" target="_blank">sheetsee.js</a>. If you want to create a collaboratively managed list of stuff, you can find out more about exactly how <a href="http://jlord.us/fork-n-go/">over here</a>.</p>
 		</div>
 	</div><!-- end wrapper -->
 
@@ -92,7 +92,7 @@
 	</script>
 
 	<script id="theNumberofSpots" type="text/html">
-		<p><strong><span class="red-text">{{numberOfSpots}}</span> hack spots strong!</p>
+		<p><strong>There are at least <span class="red-text">{{numberOfSpots}}</span> awesome places to get food in NYC!</p>
 	</script>
 
 	<script id="selectedSpot" type="text/html">
