removes unused fields from recent and selected div

--- a/index.html
+++ b/index.html
@@ -77,11 +77,6 @@
 				<p class="colorText">{{city}}, {{state}}</p>
 				<ul>
 			  	<li><span class="category">Who Can Shop:</span> {{whocanshop}}</li>
-			  	<li><span class="category">Outlets:</span> {{outlets}}</li>
-			  	<li><span class="category">Couch:</span> {{couch}}</li>
-			  	<li><span class="category">Large Table:</span> {{largetable}}</li>
-			  	<li><span class="category">Outdoor Seating:</span> {{outdoorseating}}</li>
-			  	<li><span class="category">Brewing:</span> {{brewing}}</li>
 			  	<li><span class="category">Last Edited by:</span> {{lasteditedby}}</li>
 		  	</ul>
 		  	<ul>
@@ -103,11 +98,7 @@
 			<p class="colorText">{{city}}, {{state}}</p>
 			<ul>
 		  	<li><span class="category">Who Can Shop:</span> {{whocanshop}}</li>
-		  	<li><span class="category">Outlets:</span> {{outlets}}</li>
-		  	<li><span class="category">Couch:</span> {{couch}}</li>
-		  	<li><span class="category">Large Table:</span> {{largetable}}</li>
-		  	<li><span class="category">Outdoor Seating:</span> {{outdoorseating}}</li>
-		  	<li><span class="category">Brewing:</span> {{brewing}}</li>
+		  	<li><span class="category">Last Edited by:</span> {{lasteditedby}}</li>
 	  	</ul>
 	  	<ul>
 	  		<li><a href="https://maps.google.com/maps?q={{address}},{{city}},{{state}}" target="_blank">View in Google Maps</a></li>
