adds link to repo

--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
 
 			<h3>Fork-n-Go</h3>
 			<p>This site exists as it is because of several open-source projects, most notably <a href="http://jlord.github.io/sheetsee.js" target="_blank">sheetsee.js</a>. If you want to create a collaboratively managed list of stuff, you can find out more about exactly how <a href="http://jlord.us/fork-n-go/">over here</a>.</p>
+			<p>The code for this site is <a href="https://github.com/Lips/nyc-fca-dir">here</a>. Participation is welcome!</p>
 		</div>
 	</div><!-- end wrapper -->
 
