--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
+<!DOCTYPE html>
 <html>
 	<head>
-		<title>NYC Area Food Co-ops and Buying Clubs</title>
+		<title>St. Louis Area Solidarity Economy</title>
 		<script type="text/javascript" src="js/ICanHaz.js"></script> 
-		<script type="text/javascript" src='http://api.tiles.mapbox.com/mapbox.js/v1.0.0/mapbox.js'></script>
+		<script type="text/javascript" src='http://api.tiles.mapbox.com/mapbox.js/v1.5.1/mapbox.js'></script>
 		<script type="text/javascript" src='js/jquery.js '></script>
 		<script type="text/javascript" src='js/tabletop.js'></script>
 		<script type="text/javascript" src='js/sheetsee.js'></script>
@@ -10,7 +11,7 @@
 		<link rel="shortcut icon" href="https://raw.github.com/jlord/hack-spots/master/favico.png"/>
 
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-		<link href='http://api.tiles.mapbox.com/mapbox.js/v1.0.0/mapbox.css' rel='stylesheet' />
+		<link href='http://api.tiles.mapbox.com/mapbox.js/v1.5.1/mapbox.css' rel='stylesheet' />
 		<link rel='stylesheet' type='text/css' href='http://fonts.googleapis.com/css?family=Lato:300,400,700,300italic'>
 		<link rel='stylesheet' type='text/css' href='http://fonts.googleapis.com/css?family=Amatic+SC:400,700'>		
 		<link media="screen" rel="stylesheet" type="text/css" href="css/style.css"> 
@@ -20,14 +21,10 @@
 	</head>
 <body>
 	<div id="wrapper">
-		<h1>NYC Area Food Co-ops and Buying Clubs</h1>
+		<h1>St. Louis Area Solidarity Economy</h1>
 		<div>
 			<ul class="nav">
-				<li><strong>Collectively managed NYC Area listings</strong></li>
 				<li><a href="#info">INFO</a> -</li>
-				<!-- @todo <li><a href="xxx" target="_blank">xxx</a> -</li>
-				<li><a href="xxx" target="_blank">xxx</a> -</li>
-				<li><a href="xxx" target="_blank">xxx</a></li> -->
 			</ul>
 		</div>
 		<div class="container">
@@ -45,27 +42,20 @@
 		</div>
 		<div id="info" class="container">
 			<h3>Contribute!</h3>
-			<div id="theNumberofSpots"></div>
 			<p>The information in this list is automagically pulled from <a
-	 	href="https://docs.google.com/spreadsheet/ccc?key=0Ag6u4s22HY5BdE1zanVjOEVDZDNYQlJ2aWxIdnBJTWc#gid=0" target="_blank">this Google Spreadsheet</a>, which I've shared, so feel free to add/update the spreadsheet where appropriate. For the map you'll need to <strong>get the lat and long</strong> of the spot, you can get that <a href="http://www.latlong.net/" target="_blank">here</a>. The main list will probably/eventually only display neighborhood, so don't worry if you can't supply latitude/longitude information..</p> 
+	 	href="https://docs.google.com/spreadsheet/ccc?key=0Ag6u4s22HY5BdE1zanVjOEVDZDNYQlJ2aWxIdnBJTWc#gid=0" target="_blank">this Google Spreadsheet</a>, which I've shared, so feel free to add/update the spreadsheet where appropriate. For the map you'll need to <strong>get the lat and long</strong> of the spot, you can get that <a href="http://www.latlong.net/" target="_blank">here</a>.</p>
 
-			<h3>Info</h3>
-			<p>This is (hopefully) a thorough but tidy and up-to-date listing of food co-ops and buying clubs in the NYC area, built and managed by those selfsame co-ops. If you're specifically interested in CSAs (Community Supported Agriculture), check out the <a href="http://www.justfood.org/csaloc">Just Food CSA locator.</a></p>
-
-			<p>I think that a search for NYC coops should very quickly lead someone to a resource managed by the co-op community. You might simply be interested in finding a place to buy stuff for your stomach, but you might also care to know a bit more about the evolving landscape of NYC food systems.</p> 
-
-			<h3>Fork-n-Go</h3>
-			<p>This site exists as it is because of several open-source projects, most notably <a href="http://jlord.github.io/sheetsee.js" target="_blank">sheetsee.js</a>. If you want to create a collaboratively managed list of stuff, you can find out more about exactly how <a href="http://jlord.us/fork-n-go/">over here</a>.</p>
-			<p>The code for this site is <a href="https://github.com/Lips/nyc-fca-dir">here</a>. Participation is welcome!</p>
+			<h3>About the tech</h3>
+			<p>This site exists as it is because of several open-source projects, most notably <a href="http://jlord.github.io/sheetsee.js" target="_blank">sheetsee.js</a> and <a href="http://jlord.us/fork-n-go/">over here</a>. If you want to make a similar site, see: <a href="https://github.com/Lips/nyc-fca-dir">Lips' map</a> or the code for this site <a href="https://github.com/schimmy/stl-coop-dir">here</a>. Participation is welcome!</p>
 		</div>
 	</div><!-- end wrapper -->
 
 	<script id="hackSpotsTable" type="text/html">
 		<table>
-		<tr><th class="tHeader">Name</th><th class="tHeader">Neighborhood</th><th class="tHeader">City</th><th class="tHeader">Type</th><th class="tHeader">Who Can Shop</th><th class="">Links</th></tr>
+		<tr><th class="tHeader">Name</th><th class="tHeader">Neighborhood</th><th class="tHeader">City</th><th class="tHeader">Type</th><th class="tHeader">Open to</th><th class="">Links</th></tr>
 		  {{#rows}}
-		  	<tr id="{{rowNumber}}" class="spotRow"><td>{{name}}</td><td>{{neighborhood}}</td><td>{{city}}</td><td>{{type}}</td><td>{{whocanshop}}</td><td><a class="button" href="https://maps.google.com/maps?q={{address}},{{city}},{{state}}" target="_blank">G Map</a> <a class="button" href="http://www.yelp.com/search?find_desc={{name}}&find_loc={{city}},{{state}}" target="_blank">Yelp</a></td></tr>
-		  	<tr class="hideRow"><td>Who Can Shop: {{whocanshop}}</td></tr>
+		  	<tr id="{{rowNumber}}" class="spotRow"><td>{{name}}</td><td>{{neighborhood}}</td><td>{{city}}</td><td>{{type}}</td><td>{{whocanshop}}</td><td><a class="button" href="https://maps.google.com/maps?q={{name}},{{city}},{{state}}" target="_blank">G Map</a> <a class="button" href="http://www.yelp.com/search?find_desc={{name}}&find_loc={{city}},{{state}}" target="_blank">Yelp</a></td></tr>
+		  	<tr class="hideRow"><td>Open to: {{whocanshop}}</td></tr>
 		  {{/rows}}
 	  </table>
 	</script>
@@ -77,18 +67,14 @@
 				<p class="colorText">{{address}}<p>
 				<p class="colorText">{{city}}, {{state}}</p>
 				<ul>
-			  	<li><span class="category">Who Can Shop:</span> {{whocanshop}}</li>
+			  	<li><span class="category">Open to:</span> {{whocanshop}}</li>
 			  	<li><span class="category">Last Edited by:</span> {{lasteditedby}}</li>
 		  	</ul>
 		  	<ul>
-		  		<li><a href="https://maps.google.com/maps?q={{address}},{{city}},{{state}}" target="_blank">View in Google Maps</a></li>
+		  		<li><a href="https://maps.google.com/maps?q={{name}},{{city}},{{state}}" target="_blank">View in Google Maps</a></li>
 		  		<li><a href="http://www.yelp.com/search?find_desc={{name}}&find_loc={{city}},{{state}}" target="_blank">Find on Yelp</a></li>
 		  	</ul>
 		  {{/rows}}
-	</script>
-
-	<script id="theNumberofSpots" type="text/html">
-		<p><strong>There are at least <span class="red-text">{{numberOfSpots}}</span> awesome places to get food in NYC!</p>
 	</script>
 
 	<script id="selectedSpot" type="text/html">
@@ -98,17 +84,18 @@
 			<p class="colorText">{{address}}<p>
 			<p class="colorText">{{city}}, {{state}}</p>
 			<ul>
-		  	<li><span class="category">Who Can Shop:</span> {{whocanshop}}</li>
+		  	<li><span class="category">Open to:</span> {{whocanshop}}</li>
 		  	<li><span class="category">Last Edited by:</span> {{lasteditedby}}</li>
 	  	</ul>
 	  	<ul>
-	  		<li><a href="https://maps.google.com/maps?q={{address}},{{city}},{{state}}" target="_blank">View in Google Maps</a></li>
+	  		<li><a href="https://maps.google.com/maps?q={{name}},{{city}},{{state}}" target="_blank">View in Google Maps</a></li>
 	  		<li><a href="http://www.yelp.com/search?find_desc={{name}}&find_loc={{city}},{{state}}" target="_blank">Find on Yelp</a></li>
 	  	</ul>
 	  {{/rows}}
 	</script>
 
 	<script type="text/javascript">
+    // TODO: why is this not immediate and blocking?
 	  document.addEventListener('DOMContentLoaded', function() {
 	  	var gData
 	  	var URL = "0Ag6u4s22HY5BdE1zanVjOEVDZDNYQlJ2aWxIdnBJTWc"
@@ -121,8 +108,7 @@
 	  	Sheetsee.makeTable(gData, "#hackSpotsTable")
 	  	Sheetsee.initiateTableFilter(gData, "#tableFilter", "#hackSpotsTable")
 
-	  	// when someone clicks on a row, highlight it and
-	  	// re-center the map
+	  	// when someone clicks on a row, re-center the map
 	  	$('.spotRow').live("click", function(event) {
 	  		$('.spotRow').removeClass("selectedRow")
 	 			var rowNumber = $(this).closest("tr").attr("id")
@@ -135,7 +121,7 @@
 			  $('#selectedSpot').html(selectedSpot).css("display", "inline")
 			  var selectedCoords = [dataElement[0].lat, dataElement[0].long]
 				addPopups(map, markerLayer)
-			  map.panTo(selectedCoords, 13)
+			  map.panTo(selectedCoords, 11)
 	 		})
 
 	  	// so that the first map and info that loads
@@ -160,75 +146,43 @@
 		  })
 			$('#latestSpot').html(latestSpot)
 
-			function highlightLastMarker(geoJSON, highlightColor) {
-				geoJSON[0].properties["marker-color"] = highlightColor
-				return geoJSON
-			}
-
 			// create geoJSON with coordinates and other
 			// useful bits from the original data
 			var optionsJSON = ["name", "address", "city", "rowNumber"]
-		  var geoJSONnoHL = Sheetsee.createGeoJSON(gData, optionsJSON)
+		  var geoJSON = Sheetsee.createGeoJSON(gData, optionsJSON)
 		  // create map, tilelayer (map background), markers and popups
 			var map = Sheetsee.loadMap("map")
-			Sheetsee.addTileLayer(map, 'examples.map-20v6611k')
-			var markerLayer = Sheetsee.addMarkerLayer(geoJSONnoHL, map, 13)
-			addPopups(map, markerLayer)
+			Sheetsee.addTileLayer(map, 'schimmy.gg480cl6')
+			var markerLayer = Sheetsee.addMarkerLayer(geoJSON, map, 13)
+			setupMap(map, markerLayer)
 
 			// design the popups to have the content and
 			// interactions that we want
-			function addPopups(map, markerLayer) {
+			function setupMap(map, markerLayer) {
 			  markerLayer.on('click', function(e) {
-			  // clear any selected rows	
-				$('.spotRow').removeClass("selectedRow")
-				// get row number of selected marker
-			  var rowNumber = e.layer.feature.opts.rowNumber.toString()
-			  // find that row in the table and make consider it selected
-			  $('#' + rowNumber).addClass("selectedRow")
-				// using row number, get the data for the selected spot
-			  var dataElement = Sheetsee.getMatches(gData, rowNumber, "rowNumber")
-			  // take those details and re-write the selected spot section
-				var selectedSpot = ich.selectedSpot({
-				  rows: dataElement
-			 	}) 
-			  $('#latestSpot').css("display", "none")
-			  $('#selectedSpot').html(selectedSpot).css("display", "inline")
-			  var feature = e.layer.feature
-			  var popupContent = '<h2>' + feature.opts.name + '</h2>'
-			  e.layer.bindPopup(popupContent, {closeButton: false,})
+  				// get row number of selected marker
+  			  var rowNumber = e.layer.feature.opts.rowNumber.toString()
+  			  // find that row in the table and make consider it selected
+  			  $('#' + rowNumber).addClass("selectedRow")
+  				// using row number, get the data for the selected spot
+  			  var dataElement = Sheetsee.getMatches(gData, rowNumber, "rowNumber")
+  			  // take those details and re-write the selected spot section
+  				var selectedSpot = ich.selectedSpot({
+  				  rows: dataElement
+  			 	}) 
+  			  $('#latestSpot').css("display", "none")
+  			  $('#selectedSpot').html(selectedSpot).css("display", "inline")
+  			  var feature = e.layer.feature
+  			  var popupContent = '<h2>' + feature.opts.name + '</h2>'
+  			  e.layer.bindPopup(popupContent, {closeButton: false,})
 			  })
 			}
 
 			$('.resetMap').click(function() {
-				$('.spotRow').removeClass("selectedRow")
-				markerLayer = Sheetsee.addMarkerLayer(geoJSON, map, 13)
-				addPopups(map, markerLayer)
+				setupMap(map, markerLayer)
 				$('#latestSpot').css("display", "inline")
 			  $('#selectedSpot').css("display", "none")
 			})
-
-			// find total number of spots added
-			var theNumberofSpots = ich.theNumberofSpots({
-		  	numberOfSpots: gData.length
-	 	 	})
-			$('#theNumberofSpots').html(theNumberofSpots)
-
-			function matchGeoJSONbyRowNumber(rowNumber, geoJSON, gdata, highlightColor) {
-		 		geoJSON.forEach(function (d) {
-		 			if (d.properties["marker-color"] === highlightColor) {
-		 				var origColor = gData[0].hexcolor
-		 				d.properties["marker-color"] = origColor
-		 			}
-		    	for (var key in d.opts) {
-		      	var value = d.opts[key].toString().toLowerCase()
-		   			if (key === 'rowNumber' && value.match(rowNumber.toString().toLowerCase())) {
-		     	    d.properties["marker-color"] = highlightColor
-		     	    return geoJSON
-		     		}
-		     	}
-		    })
-	 		}
-
  	}
 
 	</script>
