--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>St. Louis Area Solidarity Economy</title>
     <script type="text/javascript" src="js/ICanHaz.js"></script>
     <script type="text/javascript" src='http://api.tiles.mapbox.com/mapbox.js/v1.5.1/mapbox.js'></script>
-    <script type="text/javascript" src='js/jquery.js '></script>
+    <script type="text/javascript" src='//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.js'></script>
     <script type="text/javascript" src='js/tabletop.js'></script>
     <script type="text/javascript" src='js/sheetsee.js'></script>
     <script type="text/javascript" src='js/leaflet.markercluster.js'></script>
